# variational-nn-pytorch

./: .gitignore  README.md  attacked_evaluation.py  base_vnn.py  cifar10_base_vnn.py  conda_environment.yml  core.py  evaluate_auto_encoder.py  losses.py  main.py  metrics.py  modeling.py  models_old  network.py  params.py  perturbed_evaluation.py  pyproject.toml  requirements.txt  requirements_new.txt  resnet_vnn.py  run_batchjob.sh  run_example.sh  train.py  variational.py
networks/: auto_encoder_network.py  bayes_by_backprop.py  cifar10_base.py  cifar10_base_vnn.py  cifar10_mini_base.py  classic.py  const_mean_variational.py  densenet1.py  densenet2.py  densenet_pure.py  dropout.py  ensemble.py  functional.py  hypermodel.py  layer_ensemble.py  mnist_auto_encoder_base.py  mnist_base.py  mnist_double_linear.py  mnist_mini2_base.py  mnist_mini_base.py  mnist_mlp.py  network.py  parameter_std_variational.py  resnet.py  resnet_classic.py  resnet_pure.py  resnet_vnn.py  single_mean_variational.py  single_std_variational.py  variational.py  vgg.py  vgg_pure.py
networks/architectures/: auto_encoder_network.py  base_vnn.py  cifar10_base.py  cifar10_mini_base.py  densenet1.py  densenet2.py  densenet_pure.py  mnist_auto_encoder_base.py  mnist_base.py  mnist_conv_max.py  resnet.py  (+5 more)
tools/: create-accuracy-tex-report.py  create-evalutaion-report-r.py  create-grouped-tex-report.py  create-total-best-tex-report.py  create-total-tex-report.py  describe_models.py  r-evaluation-report-template.r  tex-report-template-long.tex  tex-report-template.tex
vnn/: __init__.py  variational.py
(+1 files in other folders)
